[gd_scene load_steps=4 format=3 uid="uid://bv8ygnkg8af42"]

[ext_resource type="Theme" uid="uid://ccuc8hdsfvxfa" path="res://assets/oakdoor_theme.tres" id="1_3kv12"]
[ext_resource type="Texture2D" uid="uid://f18rcgnoakuh" path="res://assets/file_drop.svg" id="1_3s8a2"]
[ext_resource type="Script" path="res://ui/highside.gd" id="1_doee1"]

[node name="Highside" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3kv12")
script = ExtResource("1_doee1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 333.0
offset_bottom = 272.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SchemaEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "{
	\"properties\": {
		\"name\": {
			\"type\": \"string\"
		},
		\"flag\": {
			\"type\": \"boolean\"
		},
		\"count\": {
			\"type\": \"string\"
		}
	}
}"
placeholder_text = "Edit schema..."
wrap_mode = 1
scroll_smooth = true

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="SchemaDrop" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(190, 190)
layout_mode = 2
texture = ExtResource("1_3s8a2")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="SISLEdit" type="TextEdit" parent="MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "{example: !str \"demo\"}"
placeholder_text = "Enter SISL..."
scroll_smooth = true
scroll_fit_content_height = true

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Terminal" type="Label" parent="MarginContainer2/HBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20

[node name="ValidateWait" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
one_shot = true

[connection signal="text_changed" from="MarginContainer/VBoxContainer/SchemaEdit" to="." method="_reset_validate_wait"]
[connection signal="text_changed" from="MarginContainer2/HBoxContainer/SISLEdit" to="." method="_reset_validate_wait"]
[connection signal="timeout" from="ValidateWait" to="." method="_validate"]
